--- a/Agenda/templates/agenda.html
+++ b/Agenda/templates/agenda.html
@@ -3,6 +3,10 @@
 {% block content %}
     <h2>Agendamentos</h2>
 
+    <a href="evento/">
+        <button type="button">Novo Evento</button>
+    </a>
+
     <ul style="font-size: 18px">
     {% for evento in eventos %}
         <li><i>{{ evento.titulo }} - {{ evento.get_date_evento }}</i></li>
