--- a/Agenda/templates/model-header.html
+++ b/Agenda/templates/model-header.html
@@ -3,6 +3,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Agenda</title>
 <div align="right">
-<a href="/logout">logout</a>
+<a href="/logout">
+<button>logout</button>
+</a>
 </div>
 <h1>Agenda</h1>
