Added a new column to SQL table on db.sqlite3 named 'Local', application now can receive a new information on local of event.

--- a/Agenda/templates/evento.html
+++ b/Agenda/templates/evento.html
@@ -12,7 +12,7 @@
         <br><br>
         <label>Titulo:</label>
         <br>
-        <input type="text" name="titulo" id="" size="22.5">
+        <input type="text" name="titulo" id="" size="23">
         <br>
         <label>Data do Evento:</label>
         <br>
@@ -20,7 +20,11 @@
         <br>
         <label for="">Descrição</label>
         <br>
-        <textarea name="description" id="" cols="24" rows="5"></textarea>
+        <textarea name="description" id="" cols="25" rows="5"></textarea>
+        <br>
+        <label for="">Local</label>
+        <br>
+        <input type="text" size="23">
 
         <br><br>
     <a href="/agenda/">
