--- a/Agenda/templates/agenda.html
+++ b/Agenda/templates/agenda.html
@@ -9,7 +9,11 @@
 
     <ul style="font-size: 18px">
     {% for evento in eventos %}
-        <li><i>{{ evento.titulo }} - {{ evento.get_date_evento }}</i></li>
+        <li><i>
+            {{ evento.titulo }} - {{ evento.get_date_evento }} - {{ evento.local }}
+            ( <a href="evento/?id={{ evento.id }}">Editar</a> 
+            / <a href="evento/delete/{{ evento.id }}">Excluir</a> )
+        </i></li>
     {% endfor %}
     </ul>
 {% endblock %}
