--- a/Agenda/templates/evento.html
+++ b/Agenda/templates/evento.html
@@ -11,20 +11,21 @@
 
         <br><br>
         <label>Titulo:</label>
+        <input type="number" name="id_evento" id="" value="{{ evento.id }}" hidden>
         <br>
-        <input type="text" name="titulo" id="" size="23">
+        <input type="text" name="titulo" id="" size="23" value="{{ evento.titulo }}">
         <br>
         <label>Data do Evento:</label>
         <br>
-        <input type="datetime-local" name="date_evento" id="">
+        <input type="datetime-local" name="date_evento" id="" value="{{ evento.get_date_input_evento }}">
         <br>
         <label for="">Descrição</label>
         <br>
-        <textarea name="description" id="" cols="25" rows="5"></textarea>
+        <textarea name="description" id="" cols="25" rows="5">{{ evento.description }}</textarea>
         <br>
         <label for="">Local</label>
         <br>
-        <input type="text" size="23">
+        <input type="text" size="23" value="{{ evento.local }}">
 
         <br><br>
     <a href="/agenda/">
